# gnuastro-jash

./: .gitignore  .mailmap  ChangeLog  Makefile.am  NEWS  README  README-hacking  THANKS  bootstrap.conf  configure.ac  developer-build  genauthors  psf-stamp.in
doc/: Makefile.am  README  announce-acknowledge.txt  coming-soon.html  fonts.css  formath.texi  forwebpage  genauthors  gnuastro.en.html  gnuastro.fr.html  gnuastro.texi  gnuastro.translist  javascript.html  release-checklist.txt  style.css
doc/gnuastro-figures/: README
doc/plotsrc/: Makefile  README  all.tex  conversions.sh
doc/plotsrc/tex/: color-names.tex  flatplane.tex  iandtime.tex  samplingfreq.tex  sphereandplane.tex
during-dev-test-data/: match-query.txt
during-dev-test-data/scripts/: benchmark.py  gen-inputs.sh  kdtree-gen.py
lib/: Makefile.am  arithmetic-and.c  arithmetic-bitand.c  arithmetic-bitlsh.c  arithmetic-bitor.c  arithmetic-bitrsh.c  arithmetic-bitxor.c  arithmetic-divide.c  arithmetic-eq.c  arithmetic-ge.c  arithmetic-gt.c  arithmetic-le.c  arithmetic-lt.c  arithmetic-minus.c  arithmetic-modulo.c  arithmetic-multiply.c  arithmetic-ne.c  arithmetic-or.c  arithmetic-plus.c  arithmetic-set.c  arithmetic.c  array.c  binary.c  blank.c  box.c  checkset.c  color.c  convolve.c  cosmology.c  data.c  dimension.c  ds9.c  eps.c  error.c  fit.c  fits.c  git.c  gnuastro.pc.in  gnumake.c  interpolate.c  (+28 more)
lib/gnuastro/: README  arithmetic.h  array.h  binary.h  blank.h  box.h  color.h  convolve.h  cosmology.h  data.h  dimension.h  ds9.h  eps.h  error.h  fit.h  fits.h  git.h  interpolate.h  jpeg.h  kdtree.h  label.h  list.h  match.h  pdf.h  permutation.h  pointer.h  polygon.h  python.h  qsort.h  speclines.h  statistics.h  table.h  threads.h  tiff.h  tile.h  txt.h  type.h  units.h  warp.h  wcs.h
lib/gnuastro-internal/: README  arithmetic-and.h  arithmetic-binary.h  arithmetic-bitand.h  arithmetic-bitlsh.h  arithmetic-bitor.h  arithmetic-bitrsh.h  arithmetic-bitxor.h  arithmetic-divide.h  arithmetic-eq.h  arithmetic-ge.h  arithmetic-gt.h  arithmetic-internal.h  arithmetic-le.h  arithmetic-lt.h  arithmetic-minus.h  arithmetic-modulo.h  arithmetic-multiply.h  arithmetic-ne.h  arithmetic-or.h  arithmetic-plus.h  arithmetic-set.h  checkset.h  commonopts.h  config.h.in  fixedstringmacros.h  kernel-3d.h  options.h  tableintern.h  tile-internal.h  timing.h  wcsdistortion.h
python/: Makefile.am  pyproject.toml  setup.py
python/gnuastro.cosmology/: cosmology.c  setup.py
python/src/: cosmology.c  fits.c
tests/: Makefile.am  during-dev.sh  prepconf.sh
tests/arithmetic/: connected-components.sh  onlynumbers.sh  or.sh  snimage.sh  where.sh
tests/buildprog/: simpleio.c  simpleio.sh
tests/convertt/: blankch.sh  fitstojpeg.sh  fitstojpegcmyk.sh  fitstopdf.sh  fitstotxt.sh  jpegtofits.sh  jpegtotxt.sh
tests/convolve/: frequency.sh  psf-match.sh  spatial.sh  spectrum-1d.sh  spectrum.txt
tests/cosmiccal/: simpletest.sh
tests/crop/: cat.txt  imgcat.sh  imgcenter.sh  imgcenternoblank.sh  imgpolygon.sh  imgpolygonout.sh  section.sh  wcscat.sh  wcscenter.sh  wcspolygon.sh
tests/fits/: copyhdu.sh  delete.sh  print.sh  update.sh  write.sh
tests/lib/: multithread.c  multithread.sh  versioncxx.cpp  versioncxx.sh
tests/match/: kdtree-internal.sh  kdtree-match.sh  kdtree-separate.sh  kdtree.sh  merged-cols.sh  positions-1.txt  positions-2.txt  sort-based.sh
tests/mkcatalog/: aperturephot.sh  detections.sh  objects-clumps.sh  simple-3d.sh
tests/mknoise/: addnoise-3d.sh  addnoise.sh
tests/mkprof/: 3d-cat.sh  3d-cat.txt  3dcat.sh  clearcanvas.sh  clearcanvas.txt  ellipticalmasks.sh  ellipticalmasks.txt  mkprofcat1.txt  mkprofcat2.txt  mkprofcat3.txt  mkprofcat4.txt  mosaic1.sh  mosaic2.sh  mosaic3.sh  mosaic4.sh  radeccat.sh  radeccat.txt
tests/noisechisel/: noisechisel-3d.sh  noisechisel.sh
tests/script/: list-by-night.sh  psf-create-junction.sh  psf-create-make-stamp.sh  psf-create-select-stars.sh  psf-model-flux-factor.sh  psf-model-scattered-light.sh  psf-scale-factor.sh  psf-select-stars.sh  psf-stamp.sh  psf-subtract.sh  psf-unite.sh  radial-profile.sh  sort-by-night.sh
tests/segment/: segment-3d.sh  segment.sh
tests/statistics/: basicstats.sh  estimate_sky.sh  fitting-data.txt  fitting-polynomial-robust.sh  from-stdin.sh  stdin-input.txt
tests/table/: fits-ascii-to-txt.sh  fits-binary-to-txt.sh  sexagesimal-to-deg.sh  table.txt  txt-to-fits-ascii.sh  txt-to-fits-binary.sh
tests/warp/: homographic.sh  warp_scale.sh
